--- a/dev.html
+++ b/dev.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Devayan's Interests</title>	
+		<title>Devayan Zone</title>	
 		<style>
 			body{
 				background-color: lightyellow;
@@ -27,6 +27,16 @@
 				padding-bottom: 5 px;
 				font-family: Arial;
 			}
+			.ph{
+				text-align: center;
+				font-size: 2 em;
+			}
+			.photos{
+				
+				text-align:center;
+				font-size: 0.2 em;
+				background-color: #FFEFD5;
+			}
 		</style>
 	</head>
 	<body>
@@ -35,7 +45,7 @@
 			<p>
 				Hello everyone! I am <b>Devayan Ghosh</b> and here are my interests.
 				<h2>My Photo</h2>
-				<img src="C:\Users\DA3001TU\OneDrive\Desktop\Internship\Details\ResumePhoto.jpg" width="10%" id="Devayan"> 
+				<img src="New folder\a4.jpg" width=10%>
 			</p>
 		</div>
 		<div class="fav">
@@ -51,7 +61,7 @@
 		<div>
 			<h2><em>Webpage of my interest : <a href="http://www.dukelearntoprogram.com/" target="blank_">Duke Learn to Program</a></h2></em>
 			<h2>My favourite image:</h2>
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Building_in_Floyd_Bennett_Field_%2840715h%29.jpg/750px-Building_in_Floyd_Bennett_Field_%2840715h%29.jpg" width=20%/>
+			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Building_in_Floyd_Bennett_Field_%2840715h%29.jpg/750px-Building_in_Floyd_Bennett_Field_%2840715h%29.jpg" width=20%>
 		</div>
 		<h2>Favourite IPL Teams</h2>
 		<ol>
@@ -80,5 +90,22 @@
 				<td>Anjali</td> <td>Science</td> <td>90</td>
 			</tr>
 		</table>
+		<h2>Friends</h2>
+		<p class="ph"><u><b>Mumbai</u></b></p>
+		<div class="photos">
+			<img src="New folder\a2.png" width=20%>
+		</div>
+		<p class="ph"><u><b>Pondicherry Beach</u></b></p>
+		<div class="photos">
+			<img src="New folder\a1.png" width=25%>
+		</div>
+		<p class="ph"><u><b>Pondicherry Restaurant</u></b></p>
+		<div class="photos">
+			<img src="New folder\a3.png" width=30%>
+		</div>
+		<p class="ph"><u><b>IIT Tirupati Campus</u></b></p>
+		<div class="photos">
+			<img src="New folder\a5.png" width=25%>
+		</div>
 	</body>
 </html>
